# worknight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/worknight/: __main__.py  absence_module.py  cli.py  common.py  config.py  debugger.py  driver.py  time_module.py  workday.py
src/worknight/data/: logging_config.yml
